<resources>
    <string name="application_name">C Offline</string>
    <string name="tab_1">Tutorial</string>
    <string name="tab_2">Program</string>
    <string name="tab_3">Quiz</string>
    <string name="tab_4">Questions</string>
    <string name="tab_5">More</string>

    <string name="start_learning">Start Learning</string>
    <string name="practcie_programs">Learn by Practice</string>
    <string name="test_your_talent">Test you Talent</string>
    <string name="important_questions">Important Questions</string>
    <string name="more_options">More Options</string>
    <string name="close_text">Close</string>
    <string name="answer">Answer</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>

    <string name="are_you_sure_text">Are you sure?</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="not_available">Not Avaialble</string>
    <string name="do_you_want_to_finish_the_test">Do you want to finish the test?</string>
    <string name="important_differences">Important Differences</string>
    <string name="operator_precedence">Operator Precedence</string>
    <string name="themes">Theme Color</string>
    <string name="references">References</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="about">About</string>
    <string name="email_your_suggestions">Email your suggestions</string>
    <string name="no_app_found_to_open_the_link">No app found to open the link</string>
    <string name="suggestions">Suggestion</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_type">Select Type</string>
    <string name="background_toolbar">Header(Toolbar) Background</string>
    <string name="choose_color">Choose Color</string>
    <string name="exit">Exit</string>
    <string name="text_size">Text Size</string>
</resources>
