<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvDifferences"
        style="@style/more_options_textview"
        android:text="@string/important_differences" />

    <View style="@style/more_options_seperator" />

    <TextView
        android:id="@+id/tvPrecedence"
        style="@style/more_options_textview"
        android:text="@string/operator_precedence" />

    <View style="@style/more_options_seperator" />


    <TextView
        android:id="@+id/tvThemes"
        style="@style/more_options_textview"
        android:text="@string/themes" />

    <View style="@style/more_options_seperator" />


    <TextView
        android:id="@+id/tvReferences"
        style="@style/more_options_textview"
        android:text="@string/references" />

    <View style="@style/more_options_seperator" />

    <TextView
        android:id="@+id/tvReportBug"
        style="@style/more_options_textview"
        android:text="@string/report_a_bug" />

    <View style="@style/more_options_seperator" />


    <TextView
        android:id="@+id/tvSuggestion"
        style="@style/more_options_textview"
        android:text="@string/email_your_suggestions" />

    <View style="@style/more_options_seperator" />


    <TextView
        android:id="@+id/tvAbout"
        style="@style/more_options_textview"
        android:text="@string/about" />

    <View style="@style/more_options_seperator" />


</LinearLayout>